# nexa-sdk

./: .bazelignore  .bazelrc  .claude-handoff-diff.patch  .claude-handoff.md  .gitignore  .gitmodules  BUILD.bazel  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  HANDOFF-android-aar.md  MODULE.bazel  NOTICE  README.md  SECURITY.md  linux_arm64_build_error.txt  repolint.json
bindings/: BUILD.bazel  sync_siblings.py
bindings/android/: README.md  pom.xml
bindings/android/app/: build.gradle.kts
bindings/docker/: BUILD.bazel
bindings/go/: BUILD.bazel  asr.go  common.go  cv.go  device.go  diarize.go  embedder.go  go.mod  helpers.go  image_gen.go  llm.go  ml.go  model_manager.go  reranker.go  tts.go  vlm.go
bindings/python/: BUILD.bazel  BUILD.md  MANIFEST.in  README.md  _geniex_backend.py  _sdk_fetch.py  _shared_setup.py  pyproject.toml
bindings/python-llama-cpp/: .gitignore  setup.py
bindings/python-qairt/: setup.py
bindings/python/examples/: llm.py
bindings/python/geniex/: __init__.py  _progress.py  auto.py  cli.py  model_manager.py  modeling.py  tokenizer.py
bindings/python/geniex/_ffi/: _api.py  _lib.py  _types.py
bindings/python/geniex/generation/: config.py  output.py  streamer.py
bindings/python/geniex/geniex_sdk/: _lib.py  _types.py
bindings/python/tests/: conftest.py  test_auto_vlm.py  test_cli.py  test_llm_qairt.py  test_local_aihub_pull.py  test_metadata.py  test_model_manager.py  test_progress.py  test_vlm_llama_cpp.py  test_vlm_qairt.py
bindings/python/tests/unit/: test_cli_load_banner.py  test_error_messages.py  test_modeling_decode.py  test_qairt_coerce.py  test_quant_validation.py  test_sdk_fetch.py
cli/cmd/geniex/: BUILD.bazel  config.go  function_call.go  help.go  infer.go  main.go  model.go  model_test.go  run.go  serve.go  update.go  update_test.go  version.go  version_test.go
cli/cmd/geniex/common/: BUILD.bazel  console_other.go  console_windows.go  error.go  log.go  process.go  process_test.go  repl.go
cli/cmd/geniex/logic/: cv.go
cli/internal/downloader/: BUILD.bazel  http.go  http_test.go
cli/internal/model_hub/aihub/: BUILD.bazel  aihub.go  selector.go  selector_test.go  unzip.go  unzip_test.go
cli/internal/qaihm/: BUILD.bazel  info.proto  keep.go  manifest.proto  model_metadata.proto  numerics.proto  perf.proto  platform.proto  release_assets.proto
cli/internal/qaihm/patches/: protobuf-disable-upb-linkarr.patch
cli/internal/qaihm/shared/: precision.proto  range.proto  runtime.proto  tensor_spec.proto  tool_versions.proto
cli/internal/sochost/: BUILD.bazel  sochost.go  sochost_linux.go  sochost_other.go  sochost_test.go  sochost_windows.go
cli/internal/types/: BUILD.bazel  model.go  model_test.go  package_test.go
cli/release/linux/: BUILD.bazel  check.sh  dedup_tar.bzl  dedup_tar.sh  entrypoint.sh  install.sh  jammy.lock.json  jammy.yaml  trixie.lock.json  trixie.yaml
cli/server/service/: BUILD.bazel  keepalive.go
geniex-cli/cmd/geniex-cli/: BUILD.bazel  main.go
sdk/: .gitattributes  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  CMakePresets.json  INSTALL.md  README.md  TODO.md  cmake.bzl  runfiles.bzl  s3_sdk_download.bzl
sdk/.github/actions/artifact/: action.yml
sdk/.github/actions/lfs-pull/: action.yml
sdk/.github/actions/setup-deps/: action.yml
sdk/.github/actions/version/: action.yml
sdk/.github/workflows/: ci.yml  format-check.yml  release.yml  reusable-build.yml
sdk/benchmark/: README.md  benchmark.c
sdk/benchmark/qdc/: _qdc.py  run_qdc_jobs.py  scorecard-models.json
sdk/benchmark/qdc/linux/: run_linux.sh
sdk/benchmark/qdc/prompts/: sample_prompt_1024.txt  sample_prompt_4096.txt  sample_prompt_512.txt
sdk/benchmark/qdc/tests/: test_bench.py  test_scorecard.py  utils.py
sdk/benchmark/qdc/windows/: run_windows.ps1
sdk/bindings/: CMakeLists.txt
sdk/bindings/android/: README.md  settings.gradle.kts
sdk/bindings/android/app/: build.gradle.kts  update.gradle
sdk/bindings/android/gradle/: libs.versions.toml
sdk/bindings/python/: .gitignore  CMakeLists.txt  INSTALL.md  MANIFEST.in  README.md  pyproject.toml  setup.py
sdk/bindings/python/examples/: asr.py  cv_ocr.py  diarize.py  embedder.py  image_gen.py  llm.py  models.py  rerank.py  tts.py  vlm.py
sdk/bindings/python/geniex/: __init__.py  _version.py.in  asr.py  core.py  cv.py  diarize.py  embedding.py  image_gen.py  (+5 more)
sdk/cmake/: BUILD.bazel  arm64-linux-gnu.cmake  arm64-windows-llvm.cmake  create_dylib_symlinks.cmake  llama_cpp.cmake  openssl.cmake  platforms.cmake  qairt.cmake  util.cmake
sdk/include/: build_config.h  geniex.h  image_utils.h  logging.h  ml.h  profile.h  registry.h  utils.h  validation.h
sdk/include/plugin/: IAsr.h  ICv.h  IDiarize.h  IEmbedding.h  IImageGen.h  ILlm.h  IReranker.h  ITts.h  IValidatable.h  IVlm.h  Plugin.h
sdk/model-manager/: Cargo.toml
sdk/model-manager/include/: geniex_model.h  geniex_model.ld  ml_model.h
sdk/model-manager/tests/: test_model_manager.c
sdk/patches/: llama-hexagon-release-sessions.patch
sdk/plugins/: CMakeLists.txt  README.md
sdk/plugins/llama_cpp/: BUILD.bazel  CMakeLists.txt  artifacts.bzl  build_llama_cpp.bat  build_llama_cpp.sh  llama.cpp.bazel
sdk/plugins/qairt/: CMakeLists.txt
sdk/plugins/qnn/: CMakeLists.txt
sdk/scripts/: Dockerfile  build_android.ps1  build_android.sh  dockerfile.linux-arm64  download_models.py  hf_to_s3.py  macos_sign_shared_libs.sh  run_android_tests.ps1  run_android_tests.sh  run_build_android.sh  upload_models.py  win_arm64_pywheel.ps1
sdk/scripts/python-reqs/: requirements-sync-script.txt
sdk/src/: BUILD.bazel  CMakeLists.txt  asr.cpp  cv.cpp  device.cpp  diarize.cpp  embedding.cpp  error.cpp  image-gen.cpp  llm.cpp  logging_bridge.cpp  ml.cpp  registry.cpp  rerank.cpp  tts.cpp  utils.cpp  version.cpp  vlm.cpp
sdk/tests/: CMakeLists.txt  README.md
sdk/tests/benchmark/: CMakeLists.txt  README.md  benchmark.c
sdk/tests/include/: utf8.h  util.h
sdk/tests/src/: BUILD.bazel  CMakeLists.txt  asr.cpp  cv.cpp  device.cpp  diarize.cpp  embedding.cpp  image-gen.cpp  llm.cpp  rerank.cpp  tts.cpp  version.cpp  vlm.cpp
(+605 files in other folders)
