module(name = "geniex")

# go deps

bazel_dep(
    name = "rules_go",
    version = "0.60.0",
    repo_name = "io_bazel_rules_go",
)
bazel_dep(
    name = "gazelle",
    version = "0.50.0",
    repo_name = "bazel_gazelle",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//geniex-cli:go.mod")
use_repo(
    go_deps,
    "com_github_spf13_cobra",
)

# others
