package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_import")

cc_import(
    name = "sdk_bridge",
    hdrs = ["./build/ml.h"],
    includes = ["./build"],
    shared_library = "build/libnexa_bridge.so",
)

filegroup(
    name = "sdk_runtime",
    srcs = glob(["build/**/*.so"]),
)

cc_library(
    name = "sdk",
    deps = [":sdk_bridge",":sdk_runtime"],
)
