load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

alias(
    name = "go",
    actual = ":geniex_sdk_go",
)

go_library(
    name = "geniex_sdk_go",
    srcs = [
        "common.go",
        "device.go",
        "helpers.go",
        "llm.go",
        "ml.go",
        "vlm.go",
    ],
    cdeps = ["//sdk"],
    cgo = True,
    importpath = "github.com/qcom-it-nexa-ai/geniex/bindings/go",
    visibility = ["//visibility:public"],
)

go_test(
    name = "geniex_sdk_go_test",
    srcs = [
        "common_test.go",
    ],
    embed = [":geniex_sdk_go"],
)
