load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

# Generate _version.py from the Bazel --define=VERSION value (set in .bazelrc,
# overridden by CI with the actual release tag, e.g. --define=VERSION=v0.1.0-alpha.1).
# Writes two fields:
#   __version__      — PEP 440 form (leading 'v' stripped, '-alpha.' → 'a', etc.)
#   __release_tag__  — original SemVer tag, reused by setup.py to build the
#                      SDK download URL (must match the GitHub release tag).
genrule(
    name = "gen_version",
    outs = ["geniex/_version.py"],
    cmd = """
        TAG="$(VERSION)"
        # Strip leading 'v' and map SemVer pre-release forms to PEP 440:
        #   v0.1.0            -> 0.1.0
        #   v0.1.0-alpha.1    -> 0.1.0a1
        #   v0.1.0-beta.2     -> 0.1.0b2
        #   v0.1.0-rc.3       -> 0.1.0rc3
        PEP=$$(echo "$$TAG" | sed -E -e 's/^v//' \\
            -e 's/-alpha\\.?([0-9]*)/a\\1/' \\
            -e 's/-beta\\.?([0-9]*)/b\\1/' \\
            -e 's/-rc\\.?([0-9]*)/rc\\1/')
        {
          printf '__version__ = "%s"\\n' "$$PEP"
          printf '__release_tag__ = "%s"\\n' "$$TAG"
        } > $@
    """,
)

# Low-level ctypes binding layer.
py_library(
    name = "geniex_ffi_py",
    srcs = glob(["geniex/_ffi/*.py"]),
    imports = ["."],
)

# Full public API: AutoModelForCausalLM, AutoModelForVision2Seq, etc.
# Excludes _version.py from glob — the generated one is injected via deps.
py_library(
    name = "geniex_py",
    srcs = glob(
        ["geniex/**/*.py"],
        exclude = ["geniex/_version.py"],
    ) + [":gen_version"],
    imports = ["."],
    deps = [":geniex_ffi_py"],
)

# Source distribution (sdist) — the only published Python artifact.
#
# Build: bazelisk build //bindings/python:geniex_sdist --define=VERSION=v0.1.0-alpha.1
# Output: bazel-bin/bindings/python/geniex-<pep440-version>.tar.gz
#
# Delegates to `python -m build --sdist` (rules_python has no native sdist
# rule). The sdist contains pure Python sources only; native libs are
# downloaded on the user's machine during `pip install` via setup.py's
# custom build_py command (see bindings/python/setup.py and _sdk_fetch.py).
genrule(
    name = "geniex_sdist",
    srcs = glob(
        [
            "geniex/**/*.py",
            "geniex/**/*.pyi",
            "geniex/py.typed",
        ],
        exclude = ["geniex/_version.py"],
    ) + [
        "pyproject.toml",
        "setup.py",
        "_sdk_fetch.py",
        "MANIFEST.in",
        "README.md",
        "LICENSE",
        ":gen_version",
    ],
    outs = ["geniex_sdist.tar.gz"],
    cmd = """
        set -euo pipefail
        STAGE=$$(mktemp -d)
        trap 'rm -rf "$$STAGE"' EXIT
        # Mirror bindings/python/ layout into the stage dir.
        PKG_ROOT="bindings/python"
        for f in $(SRCS); do
          rel=$${f#*$$PKG_ROOT/}
          # Files produced by :gen_version live under bazel-out/... with the
          # same geniex/_version.py suffix; strip everything up to 'geniex/'.
          case "$$rel" in
            *geniex/_version.py) rel="geniex/_version.py" ;;
          esac
          mkdir -p "$$STAGE/$$(dirname "$$rel")"
          cp "$$f" "$$STAGE/$$rel"
        done
        ( cd "$$STAGE" && python3 -m build --sdist --outdir _dist . >/dev/null )
        cp "$$STAGE"/_dist/geniex-*.tar.gz $@
    """,
    tags = ["requires-network"],
)
