# In-tree wrapper backend; see _geniex_backend.py and GH #538. tomli is
# in `requires` so the isolated build env can shim a missing stdlib
# `tomllib` (Qualcomm Linux 3.12 strip). setuptools 77+ matches the
# PEP 639 `license` table form already used in `[project]` below.
[build-system]
requires = ["setuptools>=77.0", "wheel", "tomli>=2.0"]
build-backend = "_geniex_backend"
backend-path = ["."]

[project]
name = "geniex"
dynamic = ["version"]
description = "GenieX-Bridge Python binding for running AI models on Qualcomm platforms."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Qualcomm" }]
dependencies = ["tqdm>=4.65"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
# Avoid clashing with the Go `geniex` binary when both are installed.
geniex-py = "geniex.cli:main"

[project.optional-dependencies]
notebook = ["ipywidgets>=8"]
test = ["pytest>=7.0"]

[project.urls]
# TODO: add the current GenieX-Bridge project homepage.

[tool.setuptools]
include-package-data = true
packages = { find = {} }

[tool.setuptools.package-data]
# Bundle the native libraries when building a wheel.
# Before running `pip wheel`, copy sdk/pkg-geniex/lib/ → geniex/lib/
geniex = ["lib/**/*"]

[tool.setuptools.dynamic]
version = { attr = "geniex._version.__version__" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
