[workspace]
members = [
    "crates/core",
    "crates/ffi",
]
resolver = "2"

# We deliberately leave `panic` at the default ("unwind") rather than
# setting it to "abort". The FFI layer relies on `std::panic::catch_unwind`
# (see `ffi::types::ffi_guard`) to convert Rust panics into error codes
# before they cross the C ABI boundary; `panic = "abort"` would disable
# unwinding and turn that safety net into a no-op.

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "fs", "io-util"] }
hf-hub = { version = "0.4", default-features = false, features = ["ureq"] }
fs2 = "0.4"
