load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

COMMON_DEFINES = [
    "GENIEX_DL",
]

DEBUG_DEFINES = select({
    "//sdk:enable_geniex_debug": ["GENIEX_DEBUG"],
    "//conditions:default": [],
})

cc_library(
    name = "geniex_lib",
    srcs = glob(["*.cpp"]),
    alwayslink = True,
    local_defines = DEBUG_DEFINES + [
        "ML_BUILD",
        "ML_SHARED",
    ],
    linkopts = select({
        "//sdk:windows": [],
        "//conditions:default": ["-ldl"],
    }),
    deps = ["//sdk/include:headers"],
)

cc_binary(
    name = "geniex",
    deps = [":geniex_lib"],
    linkshared = True,
    linkstatic = False,
)
