load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "srcs",
    srcs = glob(["*.cpp"]),
)

COMMON_COPTS = select({
    "//sdk:windows": ["/std:c++17", "/utf-8"],
    "//conditions:default": ["-std=c++17"],
})

COMMON_DEFINES = [
    "GENIEX_DL",
]

DEBUG_DEFINES = select({
    "//sdk:enable_geniex_debug": ["GENIEX_DEBUG"],
    "//conditions:default": [],
})

cc_library(
    name = "geniex_lib",
    srcs = glob(["*.cpp"]),
    alwayslink = True,
    copts = COMMON_COPTS,
    local_defines = COMMON_DEFINES + DEBUG_DEFINES + [
        "ML_BUILD",
        "ML_SHARED",
    ],
    linkopts = select({
        "//sdk:windows": [],
        "//conditions:default": ["-ldl"],
    }),
    deps = ["//sdk/include:headers"],
)

cc_binary(
    name = "geniex",
    deps = [":geniex_lib"],
    linkshared = True,
    linkstatic = True,
)
