load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "geniex_lib",
    srcs = ["main.go"],
    importpath = "github.com/qcom-it-nexa-ai/GenieX/geniex-cli/cmd/geniex",
    visibility = ["//visibility:private"],
    deps = [
        "//geniex-cli/internal/config",
        "//geniex-sdk-bindings/go",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "geniex",
    embed = [":geniex_lib"],
    visibility = ["//visibility:public"],
)
