load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "downloader",
    srcs = ["http.go"],
    importpath = "github.com/qcom-it-nexa-ai/geniex/cli/internal/downloader",
    visibility = ["//cli:__subpackages__"],
    deps = [
        "@com_github_valyala_fasthttp//:fasthttp",
        "@com_github_valyala_fasthttp//fasthttpproxy",
    ],
)

go_test(
    name = "downloader_test",
    srcs = ["http_test.go"],
    embed = [":downloader"],
)
